# upilot

./: .gitignore  .uiflow.json  .unityuiflow.json  .upilot-flow.json  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  LICENSE.md  MIGRATION.md  NOTICE.md  README.md  README.zh-CN.md  TEST_FLOW.md  UPILOT_FLOW_TEST.md  package.json
unitypilot~/: ACCEPTANCE_TESTS.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  README.md  mcp.example.json  pyproject.toml  run_unitypilot_mcp.py
unitypilot~/deploy/: build_release.py  dev.sh  restart_mcp.bat
unitypilot~/docs/: 00-UnityPilot-MCP-总览与模块索引.md  01-WS协议定义.md  02-MCP工具接口定义.md  03-开发任务拆解与里程碑.md  04-测试用例与验收脚本清单.md  05-错误码与排障手册.md  DISTRIBUTION.md  M01-编排服务模块-需求文档.md  M02-UnityBridge通信模块-需求文档.md  M03-编译与错误收集模块-需求文档.md  M04-自动修复循环模块-需求文档.md  M05-PlayMode与输入模拟模块-需求文档.md  M06-代码补丁执行模块-需求文档.md  M07-Console日志读取模块-需求文档.md  M08-GameObject操作模块-需求文档.md  M09-Scene管理模块-需求文档.md  M10-Component操作模块-需求文档.md  M11-截图能力模块-需求文档.md  M12-Asset管理模块-需求文档.md  M13-Prefab操作模块-需求文档.md  M14-Material与Shader模块-需求文档.md  M15-菜单项执行模块-需求文档.md  M16-Package管理模块-需求文档.md  M17-测试运行模块-需求文档.md  M18-脚本读写模块-需求文档.md  M19-CSharp代码执行模块-需求文档.md  M20-反射调用模块-需求文档.md  M21-批量操作模块-需求文档.md  M22-Selection管理模块-需求文档.md  M23-MCP-Resources模块-需求文档.md  M24-Build-Pipeline模块-需求文档.md  M25-远程运行时调试模块-需求文档.md  M26-UIToolkit编辑器验收-Agent操作指南.md  M26-编辑器E2E自动化测试-开发方案.md  M27-编辑器窗口与UIToolkit扩展-需求文档.md  M27-编辑器自动化验收-缺口Backlog.md  UnityPilot_MCP开发部署文档.md  可选与扩展能力-需求清单.md
unitypilot~/e2e-specs/examples/: listview_row_reorder_gesture_example.yaml  uitoolkit_scroll_offset_only_example.yaml
unitypilot~/scripts/: check_failures.py  run_acceptance_suite.py
unitypilot~/src/unitypilot_mcp/: dispatcher.py  fix_planner.py  main.py  mcp_main.py  mcp_smoke_test.py  mcp_stdio_server.py  models.py  protocol.py  responses.py  tool_facade.py
unitypilot~/tests/: test_editor_e2e_screenshot_assert.py
upilotserver~/: .gitignore  DEVELOPMENT.md  mcp.example.json  pyproject.toml  requirements.txt  run_upilot_mcp.py
upilotserver~/deploy/: build_release.py  build_server_exe.py  dev.bat  dev.sh  restart_mcp.bat  restart_mcp.sh
upilotserver~/e2e-specs/examples/: smoke_editor_state.yaml  smoke_unitypilot_window.yaml  smoke_upilot_window.yaml  uitoolkit_scroll_click_example.yaml  uitoolkit_scroll_offset_only_example.yaml  uitoolkit_scrollbar_drag_example.yaml
upilotserver~/scripts/: batch_yaml_runner.py  check_failures.py  run_acceptance_suite.py
upilotserver~/src/upilot_mcp/: env.py  (+17 more)
upilotserver~/tests/: test_console_capture_tools.py  test_editor_e2e_flatten.py  test_editor_e2e_screenshot_assert.py  test_http_unity_mcp_status.py  test_v02_contracts.py
(+675 files in other folders)
